--- a/index.html
+++ b/index.html
@@ -70,7 +70,14 @@ main {
     border-radius: 5px;
     cursor: pointer;
 }
-
+.btn-cuarto {
+    background-color: #fff;
+    color: #4CAF50;
+    padding: 10px 20px;
+    border: 1px solid #4CAF50;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
     </style>
     <meta charset="UTF-8">
@@ -87,7 +94,7 @@ main {
           
             <div class="mision">
                 <h3>Bienvenido</h3>
-                <p>te damos la bien venida a nuestra pagina web de la floreria EL ROZON en donde tenemos las mejores rosas , adornos florales y mas a un bajo costo  .</p>
+                <p>te damos la bienvenida a nuestra pagina web de la floreria EL ROZON en donde tenemos las mejores rosas , adornos florales y mas a un bajo costo  .</p>
                 <p>te puedes comunicar con nosotros con los siguientes numeros</p>
                 <p>whatpp:5578948687</p>
 <p>whatpp:5578948687</p>
@@ -102,6 +109,7 @@ main {
                 <a href="galeria.html" class="btn-primario" >Conoce nuestros productos</a>
                  <a href="contac.html" class="btn-secundario" >Extras</a>
                   <a href="myv.html" class="btn-tercero" >mision y visio </a>
+                 <a href="empreza.html" class="btn-cuarto" >empresa </a>
             </div>
         </section>
     </main>
