--- a/myv.html
+++ b/myv.html
@@ -64,7 +64,7 @@
     </header>
     <main>
         <section class="mision-vision">
-            <h2>Nuestra Misión y Visión</h2>
+            <h2>informacion importante</h2>
             <div class="mision">
                 <h3>Misión</h3>
                 <p>Nuestra misión es proporcionar arreglos florales de alta calidad que superen las expectativas de nuestros clientes, creando momentos inolvidables y embelleciendo su día a día.</p>
@@ -73,6 +73,36 @@
                 <h3>Visión</h3>
                 <p>Nuestra visión es ser la florería líder en la industria, reconocida por nuestra creatividad, atención al cliente y compromiso con la calidad y la sostenibilidad.</p>
             </div>
+ <div class="vision">
+                <h3>aranceles</h3>
+                <p>En nuestra floreria El rozon no pagamos arceles en la mayora de nuestros productos por que al menos la mayoria de lo adquirimos en nuestro pais .Sin embargo , si tenemos dos productos de los cuales se requiere su importacion .</p>
+ </div>
+ <div class="vision">
+                <h3>¿Que materia prima compramos en el extranjero?</h3>
+                <p>EnCompramos bases de vidrio decorativos y papel floral desde Colombia, porque son de mejor calidad y tienen diseños que no se encuentran tan fácilmente en el país.
+
+Importaciones: Bases de vidrio decorativas y papel floral.
+
+Porcentaje a pagar: Un arancel del 5% del valor de los productos para poder venderlos legalmente en México. .</p>
+ </div>
+         <div class="vision">
+                <h3>Competividad del producto</h3>
+                <p> ¿Cuántos mercados existen vendiendo el mismo producto?
+
+En nuestra ciudad hay al menos 4 florerías que venden arreglos florales similares y que también ofrecen decoraciones para eventos.
+
+Competencia: Hay al menos 4 florerías similares en la ciudad..</p>
+ </div>
+            <div class="vision">
+                <h3>aranceles</h3>
+                <p>Ventajas competitivas del Rozón:
+
+Arreglos personalizados con fotos y frases con total libertad de creatividad.
+
+Entregas el mismo día.
+
+Promociones en fechas importantes como el 14 de febrero o el día de las madres. .</p>
+ </div> 
             <div class="botones">
                 <a href="galeria.html" class="btn-primario" >Conoce nuestros productos</a>
                  <a href="contac.html" class="btn-secundario" >Extras</a>
