--- a/myv.html
+++ b/myv.html
@@ -94,14 +94,16 @@ En nuestra ciudad hay al menos 4 florerías que venden arreglos florales similar
 Competencia: Hay al menos 4 florerías similares en la ciudad..</p>
  </div>
             <div class="vision">
-                <h3>aranceles</h3>
-                <p>Ventajas competitivas del Rozón:
+                <h3>Ventajas competitivas del Rozón:</h3>
+                <p>
 
-Arreglos personalizados con fotos y frases con total libertad de creatividad.
-
-Entregas el mismo día.
-
-Promociones en fechas importantes como el 14 de febrero o el día de las madres. .</p>
+1:Arreglos personalizados con fotos y frases con total libertad de creatividad.
+</p>
+                <p>
+2:Entregas el mismo día.
+                </p>
+                <p>
+3:Promociones en fechas importantes como el 14 de febrero o el día de las madres. .</p>
  </div> 
             <div class="botones">
                 <a href="galeria.html" class="btn-primario" >Conoce nuestros productos</a>
